# pet-data-flow

./: compose.yaml
recommendations-api/: Dockerfile  config.json  config.toml  devconfig.toml  pyproject.toml  requirements.txt
recommendations-api/src/: config.py  main.py
recommendations-api/src/api/: __init__.py  recommendations.py  routes.py
recommendations-api/src/models/: recommendation.py
recommendations-api/src/utils/: toml_settings.py
recommendations-api/src/utils/rabbitmq/: producer.py  publisher.py
recommendations-handler/: Dockerfile  config.toml  pyproject.toml  requirements.txt
recommendations-handler/src/: config.py  main.py
recommendations-handler/src/models/: recommendation.py
recommendations-handler/src/utils/rabbitmq/: consumer.py
