[project]
name = "recommendations-handler"
version = "0.0.1"
authors = [{ name = "Dmitriy L" }]
requires-python = ">=3.13"
dependencies = [
    "loguru==0.7.3",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "pydantic_shapely==1.0.0a4",
    "shapely==2.1.1",
    "geojson-pydantic==2.0.0",
    "beanie==1.30.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
